--- a/spring-backend/pom.xml
+++ b/spring-backend/pom.xml
@@ -61,6 +61,26 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+				  <execution>
+					<id>copy-resources</id>
+					<phase>validate</phase>
+					<goals>
+					  <goal>copy-resources</goal>
+					</goals>
+					<configuration>
+					  <outputDirectory>${basedir}/target/classes/static/</outputDirectory>
+					  <resources>
+						<resource>
+						  <directory>${basedir}/../vue-frontend/dist</directory>
+						</resource>
+					  </resources>
+					</configuration>
+				  </execution>
+				</executions>
+			  </plugin>
 		</plugins>
 	</build>
 
