--- a/vue-frontend/package.json
+++ b/vue-frontend/package.json
@@ -16,6 +16,7 @@
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@originjs/vite-plugin-federation": "^1.2.1",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
@@ -28,6 +29,7 @@
     "prettier": "^2.8.4",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
+    "vite-plugin-top-level-await": "^1.3.0",
     "vue-tsc": "^1.2.0"
   }
 }
