--- a/spring-backend/src/main/resources/application.properties
+++ b/spring-backend/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.format_sql=true
+
 spring.h2.console.enabled=true
+
+logging.level.org.hibernate.SQL=DEBUG
